# ft-tailwind-ex

./: .gitignore  README.md  app.py  pyproject.toml  tailwind.config.js
styles/: input.css  output.css
